--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phyco-app",
+  "name": "phyco",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-community/slider": "^4.5.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
@@ -31,17 +30,16 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-router-dom": "^6.24.0"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "@types/react-dom": "^18.3.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
